--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 2,
     "name": "YouTube AdBlock Popup Closer",
     "version": "1.0",
+    "description": "A simple browser extension that removes the pop-up complaining about adblockers on YoutTube",
     "permissions": ["activeTab"],
     "content_scripts": [
       {
